--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; thomaseh [at] umich [dot] edu <br><br>
             <ul id="links_list">
                 <!-- <li><a href="https://www.linkedin.com/in/thomaseh/" target="_blank"><img height="16" width="16" src="static/icons/linkedin.svg" /></a></li> -->
-                <li><a href="https://github.com/thomasehuang" target="_blank"><img height="16" width="16" src="static/icons/github.svg" /></a></li>
-                <li><a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank"><img height="16" width="16" src="static/icons/google.svg" /></a></li>
+                <li><a href="https://github.com/thomasehuang" target="_blank"><img height="24" width="24" src="static/icons/github.svg" /></a></li>
+                <li><a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank"><img height="24" width="24" src="static/icons/google-scholar.svg" /></a></li>
                 <!-- [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
                 [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
                 [<a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank">Google Scholar</a>] -->
-                |
-                <li><a href="static/resume.pdf" target="_blank">Curriculum Vitae</a></li>
+                <!-- |
+                <li><a href="static/resume.pdf" target="_blank">Curriculum Vitae</a></li> -->
             </ul>
         </div>
     </div>
@@ -123,16 +123,33 @@
                         Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
                     </div>
                     <div>
-                        <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
+                        <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, 2018
                     </div>
                     <div>
                         [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>] [<a href="https://github.com/xcyan/neurips18_hierchical_image_manipulation" target="_blank">code</a>]
                     </div>
+                    <br>
                 </div>
             </div>
         <hr>
         <div class="hide_on_all">
-            <h2 class="title" id="pub_title">All Publications</h2>
+            <h2 class="title" id="pub_title">All Publications / Preprints</h2>
+                <div class="card">
+                    <img src="static/dla-afa-banner.svg" alt="AFA" style="height: 125px; width: 233px; float: left; margin-right: 10px;">
+                    <div>
+                        <heading>Dense Prediction with Attentive Feature Aggregation</heading>
+                        <div>
+                            Yung-Hsu Yang, <b>Thomas E. Huang</b>, Samuel Rota Bulò, Peter Kontschieder, Fisher Yu
+                        </div>
+                        <div>
+                            <i>In submission</i>
+                        </div>
+                        <div>
+                            [<a href="https://arxiv.org/abs/2111.00770" target="_blank">arxiv</a>] [<a href="https://www.vis.xyz/pub/dla-afa/" target="_blank">project</a>] [<a href="https://github.com/SysCV/dla-afa" target="_blank">code</a>]
+                        </div>
+                    </div>
+                </div>
+                <br>
                 <div class="card">
                     <img src="static/cycconf_figure1.png" alt="CycConf" style="height: 125px; width: 233px; float: left; margin-right: 10px;">
                     <div>
@@ -188,11 +205,12 @@
                             Seunghoon Hong, Xinchen Yan, <b>Thomas Huang</b>, Honglak Lee
                         </div>
                         <div>
-                            <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, Montreal, Canada, 2018
+                            <i>Advances in Neural Information Processing Systems (NeurIPS)</i>, 2018
                         </div>
                         <div>
                             [<a href="https://arxiv.org/abs/1808.07535" target="_blank">arxiv</a>] [<a href="https://github.com/xcyan/neurips18_hierchical_image_manipulation" target="_blank">code</a>]
                         </div>
+                        <br>
                     </div>
                 </div>
                 <hr>
@@ -202,7 +220,7 @@
     <div id='res_exp'>
         <h2 class="title">Research Experience</h2>
         <div class="card">
-            <heading><a href="https://vision.ee.ethz.ch/" target="_blank">Computer Vision Lab</a></heading> – ETH Zürich <span class="date">Jul. 2021 – current</span>
+            <heading><a href="https://vision.ee.ethz.ch/" target="_blank">Computer Vision Lab</a></heading> – ETH Zürich <span class="date">Aug. 2021 – current</span>
             <div>
                 Researcher
             </div>
@@ -219,17 +237,20 @@
                 Research Intern
             </div>
         </div>
-        <div class="card">
+        <!-- <div class="card">
             <heading><a href="https://arm.eecs.umich.edu/" target="_blank">ARM Lab</a></heading> – University of Michigan <span class="date">Jan. 2018 – Apr. 2018</span>
             <div>
                 Research Assistant
             </div>
-        </div>
+        </div> -->
         <hr>
     </div>
 
     <div id='teach'>
         <h2 class="title">Teaching</h2>
+        <div class="card">
+            <heading>227-0447-00: Image Analysis and Computer Vision</heading> – ETH Zürich <span class="date">Sep. 2021 – current</span>
+        </div>
         <div class="card">
             <heading>EECS 545: Machine Learning</heading> – University of Michigan <span class="date">Sep. 2020 – Dec. 2020</span>
             <div class="card_body hide_on_all">
@@ -253,7 +274,7 @@
     <div id='ed'>
         <h2 class="title">Education</h2>
         <div class="card">
-            <heading>ETH Zürich</heading> – Zürich, Switzerland <span class="date">Jul. 2021 – current</span>
+            <heading>ETH Zürich</heading> – Zürich, Switzerland <span class="date">Aug. 2021 – current</span>
             <div>
                 PhD in Information Technology and Electrical Engineering
             </div>
