--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             <ul id="links_list">
                 <!-- <li><a href="https://www.linkedin.com/in/thomaseh/" target="_blank"><img height="16" width="16" src="static/icons/linkedin.svg" /></a></li> -->
                 <li><a href="https://github.com/thomasehuang" target="_blank"><img height="24" width="24" src="static/icons/github.svg" /></a></li>
-                <li><a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank"><img height="24" width="24" src="static/icons/google-scholar.svg" /></a></li>
+                <li><a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank"><img height="26" width="26" src="static/icons/google-scholar-square.svg" /></a></li>
+                <li><a href="https://www.semanticscholar.org/author/Thomas-E.-Huang/1564426583" target="_blank"><img height="26" width="26" src="static/icons/semantic-scholar-square.svg" /></a></li>
                 <!-- [<a href="https://www.linkedin.com/in/thomaseh/" target="_blank">LinkedIn</a>]
                 [<a href="https://github.com/thomasehuang" target="_blank">GitHub</a>]
                 [<a href="https://scholar.google.com/citations?user=7wuq-7AAAAAJ&hl=en" target="_blank">Google Scholar</a>] -->
