--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h2 class="title">About Me</h2>
         <div class="norm">
             <!-- Hello! My name is <strong>Thomas E. Huang</strong>. I am a second-year PhD student in the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>. My advisor is Professor <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision. -->
-            Hello! My name is <strong>Thomas E. Huang</strong>. I am a first-year PhD student at the <a href="https://cv.ethz.ch/" target="_blank">Visual Intelligence and Systems</a> group at the <a href="https://vision.ee.ethz.ch/" target="_blank">Computer Vision Lab</a>, advised by Prof. <a href="https://www.yf.io/" target="_blank">Fisher Yu</a>. Previously, I obtained my Master's and Bachelor's degrees from the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>, advised by Prof. <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision.
+            Hello! My name is <strong>Thomas E. Huang</strong>. I am a second-year PhD student at the <a href="https://cv.ethz.ch/" target="_blank">Visual Intelligence and Systems</a> group at the <a href="https://vision.ee.ethz.ch/" target="_blank">Computer Vision Lab</a>, advised by Prof. <a href="https://www.yf.io/" target="_blank">Fisher Yu</a>. Previously, I obtained my Master's and Bachelor's degrees from the <a href="https://www.eecs.umich.edu/" target="_blank">EECS department</a> at the <a href="https://umich.edu/" target="_blank">University of Michigan</a>, advised by Prof. <a href="http://web.eecs.umich.edu/~honglak/" target="_blank">Honglak Lee</a>. My <span id="r">r</span>esearch interests are deep learning and its <span id="a">a</span>pplication to <span id="c">c</span>omputer vision.
         </div>
        <hr>
     </div>
@@ -111,7 +111,7 @@
                         <i>International Conference on Machine Learning (ICML)</i>, 2020
                     </div>
                     <div>
-                        [<a href="https://arxiv.org/abs/2003.06957" target="_blank">arxiv</a>] [<a href="https://github.com/ucbdrive/few-shot-object-detection" target="_blank">code</a>]
+                        [<a href="https://arxiv.org/abs/2003.06957" target="_blank">arxiv</a>] [<a href="https://github.com/ucbdrive/few-shot-object-detection" target="_blank">code</a> <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/ucbdrive/few-shot-object-detection?style=social">]
                     </div>
                 </div>
             </div>
@@ -150,6 +150,23 @@
                         </div>
                     </div>
                 </div>
+                <br>
+                <div class="card">
+                    <img src="static/tet-banner.jpeg" alt="TET" style="height: 125px; width: 233px; float: left; margin-right: 10px;">
+                    <div>
+                        <heading>Tracking Every Thing in the Wild</heading>
+                        <div>
+                            Siyuan Li, Martin Danelljan, Henghui Ding, <b>Thomas E. Huang</b>, Fisher Yu
+                        </div>
+                        <div>
+                            <i>European Conference on Computer Vision (ECCV) 2022</i>
+                        </div>
+                        <div>
+                            [<a href="https://arxiv.org/abs/2207.12978" target="_blank">arxiv</a>] [<a href="https://www.vis.xyz/pub/tet/" target="_blank">project</a>] [<a href="https://github.com/SysCV/tet" target="_blank">code</a>]
+                        </div>
+                    </div>
+                </div>
+                <br>
                 <br>
                 <div class="card">
                     <img src="static/cycconf_figure1.png" alt="CycConf" style="height: 125px; width: 233px; float: left; margin-right: 10px;">
@@ -193,7 +210,7 @@
                             <i>International Conference on Machine Learning (ICML)</i>, 2020
                         </div>
                         <div>
-                            [<a href="https://arxiv.org/abs/2003.06957" target="_blank">arxiv</a>] [<a href="https://github.com/ucbdrive/few-shot-object-detection" target="_blank">code</a>]
+                            [<a href="https://arxiv.org/abs/2003.06957" target="_blank">arxiv</a>] [<a href="https://github.com/ucbdrive/few-shot-object-detection" target="_blank">code</a> <img alt="GitHub Repo stars" src="https://img.shields.io/github/stars/ucbdrive/few-shot-object-detection?style=social">]
                         </div>
                     </div>
                 </div>
@@ -250,7 +267,7 @@
     <div id='teach'>
         <h2 class="title">Teaching</h2>
         <div class="card">
-            <heading>227-0447-00: Image Analysis and Computer Vision</heading> – ETH Zürich <span class="date">Sep. 2021 – current</span>
+            <heading>227-0447-00: Image Analysis and Computer Vision</heading> – ETH Zürich <span class="date">Sep. 2021 – Mar. 2022</span>
         </div>
         <div class="card">
             <heading>EECS 545: Machine Learning</heading> – University of Michigan <span class="date">Sep. 2020 – Dec. 2020</span>
