Updating website, adding services

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     -->
     <link rel="stylesheet" type="text/css" href="index.css">
     <script src="index.js"></script>
+    <link rel='icon' href='static/favicon.ico' type='image/x-icon' />
 </head>
 <body>
     <!-- <h2>Contact Info and Links</h2> -->
@@ -340,8 +341,6 @@
         <hr>
     </div>
 
-    <!-- Below are not shown by default -->
-
     <div id='prof_exp'>
         <h2 class="title">Professional Experience</h2>
         <div class="card">
@@ -353,8 +352,25 @@
         <hr>
     </div>
 
+    <div id='services'>
+        <h2 class="title">Services</h2>
+        <div class="card">
+            <heading>Organizer</heading>
+            <div>
+                <a href="https://www.bdd100k.com/challenges/cvpr2022/" target="_blank">CVPR 2022 WAD BDD100K Challenges</a>, <a href="https://www.bdd100k.com/challenges/eccv2022/" target="_blank">ECCV 2022 SSLAD BDD100K Challenges</a>
+            </div>
+        </div>
+        <div class="card">
+            <heading>Reviewer</heading>
+            <div>
+                CVPR'22, WACV'23
+            </div>
+        </div>
+        <hr>
+    </div>
+
     <div id="footer">
-        <i>Website best viewed on a computer.</i>
+        <i>Website best viewed on a computer. Last updated: August 9th, 2022.</i>
     </div>
 </body>
 </html>
